# hardshell

./: .gitignore  CMakeLists.txt
docs/: LICENSE.txt  changes.md  readme.md
src/: hs.h  hs_internal.h  main.c  parse.c  sandbox.c  shell.c  shell.h  util.c
work/: firefox.sh  shell.sh  test.sh
